@@ -266,6 +266,9 @@ def configure(keymap):
     # クリップボード履歴の最大数 (デフォルト:1000)
     keymap.clipboard_history.maxnum = 10000
 
+    # クリップボード履歴として保存する合計最大サイズ (デフォルト:10MB)
+    keymap.clipboard_history.quota = 10*1024*1024
+
 
     # クリップボード履歴リスト表示のカスタマイズ
     if 1:
