@@ -675,17 +675,28 @@
         コマンドの実行機能を追加することが可能です。
 
 
-    **クリップボード履歴の最大数の設定**
+    **クリップボード履歴の最大数/最大合計サイズの設定**
 
         クリップボード履歴の最大数を設定するには、以下のように記述します。
 
-        **クリップボード履歴の最大数を設定例**
+        **クリップボード履歴の最大数の設定例**
 
         .. code-block:: python
 
             keymap.clipboard_history.maxnum = 10000
 
         デフォルトでは 1000 個の履歴が保存されます。
+
+
+        また、クリップボード履歴として保存する最大サイズを設定するには、以下のように記述します。
+
+        **クリップボード履歴として保存する最大サイズの設定例**
+
+        .. code-block:: python
+
+            keymap.clipboard_history.quota = 10 * 1024 * 1024
+
+        デフォルトでは 10MB の履歴が保存されます。
 
 
 APIリファレンス
